--- a/parts/abbrev/abbrevconfigwidgetbase.ui
+++ b/parts/abbrev/abbrevconfigwidgetbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>AbbrevConfigWidgetBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -8,14 +8,14 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>472</width>
-            <height>449</height>
+            <width>474</width>
+            <height>410</height>
         </rect>
     </property>
     <property name="caption">
         <string>Code Templates</string>
     </property>
-    <grid>
+    <vbox>
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
@@ -25,47 +25,23 @@
         <property name="spacing">
             <number>6</number>
         </property>
-        <widget class="QLabel" row="4" column="0">
+        <widget class="QCheckBox">
             <property name="name">
-                <cstring>TextLabel2</cstring>
+                <cstring>checkWordCompletion</cstring>
             </property>
             <property name="text">
-                <string>Code:</string>
+                <string>Enable automatic word completion</string>
             </property>
         </widget>
-        <widget class="QMultiLineEdit" row="5" column="0" rowspan="1" colspan="3">
+        <widget class="QLabel">
             <property name="name">
-                <cstring>editCode</cstring>
-            </property>
-        </widget>
-        <widget class="QPushButton" row="3" column="0">
-            <property name="name">
-                <cstring>buttonAddTemplate</cstring>
+                <cstring>TextLabel1</cstring>
             </property>
             <property name="text">
-                <string>&amp;Add...</string>
+                <string>Templates:</string>
             </property>
         </widget>
-        <widget class="QPushButton" row="3" column="1">
-            <property name="name">
-                <cstring>buttonRemoveTemplate</cstring>
-            </property>
-            <property name="text">
-                <string>&amp;Remove</string>
-            </property>
-        </widget>
-        <spacer row="3" column="2">
-            <property name="name">
-                <cstring>Spacer1</cstring>
-            </property>
-            <property name="orientation">
-                <enum>Horizontal</enum>
-            </property>
-            <property name="sizeType">
-                <enum>Expanding</enum>
-            </property>
-        </spacer>
-        <widget class="QListView" row="2" column="0" rowspan="1" colspan="3">
+        <widget class="QListView">
             <column>
                 <property name="text">
                     <string>Template</string>
@@ -73,7 +49,7 @@
                 <property name="clickable">
                     <bool>true</bool>
                 </property>
-                <property name="resizeable">
+                <property name="resizable">
                     <bool>true</bool>
                 </property>
             </column>
@@ -84,7 +60,7 @@
                 <property name="clickable">
                     <bool>true</bool>
                 </property>
-                <property name="resizeable">
+                <property name="resizable">
                     <bool>true</bool>
                 </property>
             </column>
@@ -95,7 +71,7 @@
                 <property name="clickable">
                     <bool>true</bool>
                 </property>
-                <property name="resizeable">
+                <property name="resizable">
                     <bool>true</bool>
                 </property>
             </column>
@@ -109,15 +85,63 @@
                 <enum>AllColumns</enum>
             </property>
         </widget>
-        <widget class="QLabel" row="1" column="0">
+        <widget class="QLayoutWidget">
             <property name="name">
-                <cstring>TextLabel1</cstring>
+                <cstring>layout3</cstring>
+            </property>
+            <hbox>
+                <property name="name">
+                    <cstring>unnamed</cstring>
+                </property>
+                <widget class="QPushButton">
+                    <property name="name">
+                        <cstring>buttonAddTemplate</cstring>
+                    </property>
+                    <property name="text">
+                        <string>&amp;Add...</string>
+                    </property>
+                </widget>
+                <widget class="QPushButton">
+                    <property name="name">
+                        <cstring>buttonRemoveTemplate</cstring>
+                    </property>
+                    <property name="text">
+                        <string>&amp;Remove</string>
+                    </property>
+                </widget>
+                <spacer>
+                    <property name="name">
+                        <cstring>Spacer1</cstring>
+                    </property>
+                    <property name="orientation">
+                        <enum>Horizontal</enum>
+                    </property>
+                    <property name="sizeType">
+                        <enum>Expanding</enum>
+                    </property>
+                    <property name="sizeHint">
+                        <size>
+                            <width>275</width>
+                            <height>20</height>
+                        </size>
+                    </property>
+                </spacer>
+            </hbox>
+        </widget>
+        <widget class="QLabel">
+            <property name="name">
+                <cstring>TextLabel2</cstring>
             </property>
             <property name="text">
-                <string>Templates:</string>
+                <string>Code:</string>
             </property>
         </widget>
-    </grid>
+        <widget class="QMultiLineEdit">
+            <property name="name">
+                <cstring>editCode</cstring>
+            </property>
+        </widget>
+    </vbox>
 </widget>
 <connections>
     <connection>
@@ -146,6 +170,7 @@
     </connection>
 </connections>
 <tabstops>
+    <tabstop>checkWordCompletion</tabstop>
     <tabstop>listTemplates</tabstop>
     <tabstop>buttonAddTemplate</tabstop>
     <tabstop>buttonRemoveTemplate</tabstop>
